Tweak to make sure subtitle overlay covers content.

--- a/widgets/btt/cc/ui/section/section.css
+++ b/widgets/btt/cc/ui/section/section.css
@@ -112,9 +112,12 @@
 {
 	position: absolute;
 	top: @headerHeight;
-	left: 0;
+	left: -20px;
 	bottom: 0;
-	right: 0;
+	right: -20px;
+	padding-left: 20px;
+	padding-right: 20px;
+	overflow: hidden;
 }
 
 .__CLASS__ .content > *
@@ -166,7 +169,6 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	overflow: hidden;
 }
 
 .__CLASS__ .subtitle-overlay
@@ -174,7 +176,7 @@
 	position: absolute;
 	top: 0;
 	width: 100%;
-	height: 95%;
+	height: 100%;
 	z-index: 20;
 	.text-shadow();
 }
